# gstwebrtc-demos

./: .rustfmt.toml  Makefile  docker-compose.yml
server/: Cargo.toml
server/src/: main.rs
server/src/app/: mod.rs
server/src/media/: mod.rs  webrtcbin.rs
