[package]
name = "gst-rust"
version = "0.1.0"
edition = "2018"
authors = ["maxmcd <max.t.mcdonnell@gmail.com>"]

[dependencies]
anyhow = "1.0.19"
clap = "2.33"
failure = "0.1.1"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
glib = "0.8"
gstreamer = "0.14"
gstreamer-sdp = "0.14"
gstreamer-webrtc = "0.14"
lazy_static = "1.0"
native-tls = "0.2.3"
rand = "0.7"
serde = "1.0.66"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.4"
tokio = "=0.2.0-alpha.6"
websocket = "0.23"
